syntax = "proto3"; 
package com.foo.service.helloworld;

service Greeter { 
  rpc Hello(HelloRequest) returns (HelloResponse) {} // to be implemented in handler
  rpc NextHello(HelloRequest) returns (HelloResponse) {} // call another service
}

message HelloRequest { 
  string name = 1;
}

message HelloResponse { 
  string greeting = 1;
}