syntax = "proto3"; 
package com.foo.service.nexthelloworld;

service NextGreeter { 
  rpc Hello(HelloRequest) returns (HelloResponse) {} // to be implemented in handler
}

message HelloRequest { 
  string name = 1;
}

message HelloResponse { 
  string greeting = 1;
}